# ml-report-kit

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: example_scikit.py
ml_report_kit/: __init__.py  report.py
src/: ml_report_kit.py  ml_utils.py
tests/: test_ml_report_kit.py
