[project]
name = "ml-report-kit"
version = "0.1.3"
description = "Generating evaluating metrics reports for machine learning models in two lines of code."
authors = [
    {name = "David S. Batista", email = "dsbatista@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/davidsbatista/ml-report-kit"

[tool.hatch.build.targets.sdist]
include = ["/ml_report_kit"]